@@ -15,6 +15,7 @@ import android.webkit.WebViewClient;
 import android.widget.Toast;
 
 import com.klinker.android.twitter.R;
+import com.klinker.android.twitter.manipulations.widgets.HTML5WebView;
 import com.klinker.android.twitter.settings.AppSettings;
 import com.klinker.android.twitter.utils.Utils;
 
@@ -22,7 +23,7 @@ public class BrowserActivity extends Activity {
 
     private AppSettings settings;
     private String url;
-    private WebView browser;
+    private HTML5WebView browser;
 
     @Override
     public void finish() {
@@ -40,51 +41,24 @@ public class BrowserActivity extends Activity {
 
         getWindow().requestFeature(Window.FEATURE_PROGRESS);
         Utils.setUpTheme(this, settings);
-        setContentView(R.layout.browser_activity);
+        Utils.setActionBar(this);
 
         url = getIntent().getStringExtra("url");
 
-        browser = (WebView) findViewById(R.id.webview);
-        browser.getSettings().setJavaScriptEnabled(true);
-        browser.getSettings().setBuiltInZoomControls(true);
-        browser.clearCache(true);
-        browser.getSettings().setAppCacheEnabled(false);
-        browser.getSettings().setLoadWithOverviewMode(true);
-        browser.getSettings().setUseWideViewPort(true);
-        browser.getSettings().setDisplayZoomControls(false);
-        browser.getSettings().setSupportZoom(true);
-        browser.setBackgroundResource(android.R.color.transparent);
+        browser = new HTML5WebView(this);
 
-        if (Build.VERSION.SDK_INT >= 17) {
-            browser.getSettings().setMediaPlaybackRequiresUserGesture(false);
+        setContentView(browser.getLayout());
+
+        browser.setBackgroundColor(getResources().getColor(android.R.color.transparent));
+
+        try {
+            browser.loadUrl(url);
+        } catch (Exception e) {
+
         }
-
-        final Activity activity = this;
-        browser.setWebChromeClient(new WebChromeClient() {
-            public void onProgressChanged(WebView view, int progress) {
-                // Activities and WebViews measure progress with different scales.
-                // The progress meter will automatically disappear when we reach 100%
-                activity.setProgress(progress * 100);
-
-                if (progress == 100) {
-                    browser.setBackgroundColor(getResources().getColor(android.R.color.white));
-                } else {
-                    browser.setBackgroundColor(getResources().getColor(android.R.color.transparent));
-                }
-            }
-        });
-
-        browser.setWebViewClient(new WebViewClient() {
-            public void onReceivedError(WebView view, int errorCode, String description, String failingUrl) {
-                Toast.makeText(activity, getResources().getString(R.string.error_loading_page), Toast.LENGTH_SHORT).show();
-            }
-        });
-
-        browser.loadUrl(url);
 
         getActionBar().setDisplayHomeAsUpEnabled(true);
 
-        Utils.setActionBar(this);
     }
 
     @Override
